--- a/HackatonSeguridad/app/src/main/res/layout/activity_main.xml
+++ b/HackatonSeguridad/app/src/main/res/layout/activity_main.xml
@@ -55,4 +55,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtContra"
         app:layout_constraintVertical_bias="0.27999997" />
+
+    <TextView
+        android:id="@+id/txtregistro"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:onClick="registrarse"
+        android:text="Registrarse"
+        android:textColor="#0101DF"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintVertical_bias="0.26" />
 </android.support.constraint.ConstraintLayout>
