--- a/HackatonSeguridad/app/src/main/res/layout/activity_menu.xml
+++ b/HackatonSeguridad/app/src/main/res/layout/activity_menu.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/malecon"
     tools:context="com.example.computacion.hackatonseguridad.Menu"
     tools:layout_editor_absoluteY="81dp">
 
@@ -16,13 +17,15 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="#FF0000"
+        android:drawableLeft="@drawable/descarga"
         android:text="Ambulancia"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.08"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.20999998" />
+        app:layout_constraintVertical_bias="0.32" />
 
     <Button
         android:id="@+id/salvavidas"
@@ -34,12 +37,13 @@
         android:layout_marginTop="8dp"
         android:background="@android:color/background_light"
         android:text="Salvavidas"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.9"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.20999998" />
+        app:layout_constraintVertical_bias="0.32" />
 
     <Button
         android:id="@+id/policia"
@@ -51,6 +55,7 @@
         android:layout_marginTop="8dp"
         android:background="#0080FF"
         android:text="Policía"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.08"
@@ -66,7 +71,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:background="#FF8000"
         android:text="Extravío"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.9"
@@ -84,6 +91,7 @@
         android:layout_marginTop="8dp"
         android:onClick="salir"
         android:text="Salir"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.9"
@@ -101,10 +109,26 @@
         android:layout_marginTop="8dp"
         android:background="#FFFF00"
         android:text="Bomberos"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.08"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/policia"
         app:layout_constraintVertical_bias="0.13999999" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="0dp"
+        android:layout_height="108dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/alerta" />
 </android.support.constraint.ConstraintLayout>
