--- a/HackatonSeguridad/app/src/main/res/layout/activity_menu.xml
+++ b/HackatonSeguridad/app/src/main/res/layout/activity_menu.xml
@@ -17,6 +17,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="#FF0000"
+        android:onClick="ayudaSeleccionada"
         android:text="Ambulancia"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -35,6 +36,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@android:color/background_light"
+        android:onClick="ayudaSeleccionada"
         android:text="Salvavidas"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -53,6 +55,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="#0080FF"
+        android:onClick="ayudaSeleccionada"
         android:text="Policía"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -71,6 +74,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="#FF8000"
+        android:onClick="ayudaSeleccionada"
         android:text="Extravío"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -107,6 +111,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="#FFFF00"
+        android:onClick="ayudaSeleccionada"
         android:text="Bomberos"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
