--- a/HackatonSeguridad/app/src/main/res/layout/activity_menu.xml
+++ b/HackatonSeguridad/app/src/main/res/layout/activity_menu.xml
@@ -17,6 +17,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="#FF0000"
+        android:drawableLeft="@drawable/ambulance"
         android:onClick="ayudaSeleccionada"
         android:text="Ambulancia"
         android:textSize="16sp"
@@ -36,6 +37,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@android:color/background_light"
+        android:drawableStart="@drawable/lifesaver"
         android:onClick="ayudaSeleccionada"
         android:text="Salvavidas"
         android:textSize="16sp"
@@ -55,33 +57,16 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="#0080FF"
+        android:drawableLeft="@drawable/police"
+        android:gravity="left|center_vertical"
         android:onClick="ayudaSeleccionada"
-        android:text="Policía"
+        android:text="   Policía"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.08"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ambulancia"
-        app:layout_constraintVertical_bias="0.060000002" />
-
-    <Button
-        android:id="@+id/extravio"
-        android:layout_width="146dp"
-        android:layout_height="110dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:background="#FF8000"
-        android:onClick="ayudaSeleccionada"
-        android:text="Extravío"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.9"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/salvavidas"
         app:layout_constraintVertical_bias="0.060000002" />
 
     <Button
@@ -97,10 +82,9 @@
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.9"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/extravio"
-        app:layout_constraintVertical_bias="0.13999999" />
+        app:layout_constraintTop_toBottomOf="@+id/button2" />
 
     <Button
         android:id="@+id/button2"
@@ -111,15 +95,16 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="#FFFF00"
+        android:drawableLeft="@drawable/firefighter"
         android:onClick="ayudaSeleccionada"
         android:text="Bomberos"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.08"
+        app:layout_constraintHorizontal_bias="0.9"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/policia"
-        app:layout_constraintVertical_bias="0.13999999" />
+        app:layout_constraintTop_toBottomOf="@+id/salvavidas"
+        app:layout_constraintVertical_bias="0.060000002" />
 
     <ImageView
         android:id="@+id/imageView"
