conexion websocket con pc lilia

--- a/HackatonSeguridad/app/src/main/res/layout/activity_menu.xml
+++ b/HackatonSeguridad/app/src/main/res/layout/activity_menu.xml
@@ -18,7 +18,7 @@
         android:layout_marginTop="8dp"
         android:background="#FF0000"
         android:drawableLeft="@drawable/ambulance"
-        android:onClick="ayudaSeleccionada"
+        android:onClick="pedirAmbulancia"
         android:text="Ambulancia"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -38,7 +38,7 @@
         android:layout_marginTop="8dp"
         android:background="@android:color/background_light"
         android:drawableStart="@drawable/lifesaver"
-        android:onClick="ayudaSeleccionada"
+        android:onClick="pedirSalvavidas"
         android:text="Salvavidas"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -59,7 +59,7 @@
         android:background="#0080FF"
         android:drawableLeft="@drawable/police"
         android:gravity="left|center_vertical"
-        android:onClick="ayudaSeleccionada"
+        android:onClick="pedirPolicia"
         android:text="   Policía"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -96,7 +96,7 @@
         android:layout_marginTop="8dp"
         android:background="#FFFF00"
         android:drawableLeft="@drawable/firefighter"
-        android:onClick="ayudaSeleccionada"
+        android:onClick="pedirBomberos"
         android:text="Bomberos"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
